css/styles.css
/* ... */
.team-descr {
  width: 439px;
  margin-bottom: 43px;
}

.team-text {
  width: 483px;
  padding-bottom: 44px;
}

.team-image {
  display: none;

  width: 416px;
  height: 479px;

  background-color: var(--light);
}

.team-image.active {
  display: block;
}

.team-members {
  display: flex;
  flex-direction: column;
  gap: 35px;

  width: 269px;
}

.team-members > li {
  position: relative;
  z-index: 10;

  background-color: var(--bg-color);
}

.team-member-name {
  margin-bottom: 3px;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 24px;
  font-weight: 600;
  line-height: 1.417;
  text-align: end;

  cursor: pointer;
}

.team-member-name.active {
  margin-bottom: 0;

  color: #ff6600;
  font-size: 32px;
  line-height: 1.313;
  text-decoration: underline;
}

.team-member-position {
  font-size: 24px;
  text-align: end;
}

/* --------- PRICING --------- */

.pricing {
  scroll-margin-top: 145px;

  background-color: var(--status-items);
  background-image: url(../assets/img/map.webp);
  background-repeat: no-repeat;
  background-size: 997px 640px;
  background-position: 0 0;
}

.pricing-container {
  padding-top: 143px;
  padding-bottom: 236px;

  text-align: center;
}

.section-name.pricing-name {
  margin-bottom: 14px;
}

.section-title.pricing-title {
  margin-bottom: 67px;
}

.pricing-list {
  display: flex;
  flex-direction: row;
  gap: 24px;
}

.pricing-item {
  position: relative;

  width: calc((100% - 48px) / 3);
  height: 536px;
  padding: 44px 50px 50px;

  border: 1px solid var(--contacts-color);

  background-color: var(--bg-color);

  text-align: start;
}

.price-line {
  margin-bottom: 13px;
}

.price {
  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
}

.price-span {
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.625;
}

.price-tariff {
  display: flex;
  flex-direction: row;
  gap: 16px;
  align-items: center;

  margin-bottom: 27px;
}

.price-icon-star {
  stroke: var(--accent);
  fill: transparent;
}

.pricing-features {
  display: flex;
  flex-direction: column;
  gap: 2px;

  padding-top: 19px;
  margin-bottom: 38px;

  border-top: 1px solid var(--contacts-color);
}

.pricing-feature {
  position: relative;

  padding-left: 14px;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 16px;
  line-height: 2.25;
}

.pricing-feature::before {
  content: "";
  position: absolute;
  left: 0;
  top: 1em;

  width: 2px;
  height: 2px;
  
  border-radius: 50%;

  background-color: var(--dark);
}

.pricing-feature.closed {
  color: var(--dark-text);
}

.pricing-feature.closed::before {
  background-color: var(--dark-text);
}

.pricing-button {
  padding: 12px 35px;
}

.pricing-rectangle {
  position: absolute;
  top: 0;
  left: 0;

  fill: var(--dark);
}

.pricing-special {
  position: absolute;
  top: 10px;
  right: 10px;
  display: block;

  width: 100px;
  height: 30px;

  background-color: #39ca6e;
  border-radius: 20px;

  color: var(--bg-color);
  text-align: center;
}

/* --------- BLOG --------- */

.blog {
  position: relative;
}

.blog::before {
  content: "";
  position: absolute;
  top: 596px;
  left: 0;
  z-index: 10;

  width: 286px;
  height: 545px;

  background-image: url(../assets/img/architecture-2.webp);
  background-repeat: no-repeat;
  background-size: contain;
}

.container.blog-container {
  margin-bottom: 73px;

  text-align: center;
}

.blog-main-article {
  position: relative;

  margin-bottom: 30px;
}

.blog-main-article-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  gap: 202px;

  text-align: start;
}

.blog-main-article-date {
  position: absolute;
  top: 10px;
  left: 50%;
  display: block;

  width: 129px;
  height: 123px;
  padding: 24px 29px 31px 30px;
  
  background-image: url(../assets/img/date.png);
  background-size: contain;
  background-position: 0 0;
  background-repeat: no-repeat;

  color: var(--bg-color);
  font-size: 24px;
  line-height: 1.417;
  
  transform: translateX(-50%);
}

.blog-main-article-pic {
  width: 636px;
  height: 361px;

  background-color: var(--light);
}

.blog-main-article-text {
  width: 459px;
}

.blog-descr {
  padding-left: 41px;
  margin-bottom: 13px;
}

.blog-author {
  position: relative;

  margin-right: 30px;
}

.blog-author::before {
  content: "";
  display: block;
  position: absolute;
  top: 50%;
  left: -41px;

  width: 31px;
  height: 1px;

  background-color: var(--dark-text);
}

.blog-theme {
  position: relative;
}

.blog-theme::before {
  position: absolute;
  content: "";
  display: block;
  left: -16px;
  top: 0.4em;

  width: 6px;
  height: 6px;

  border-radius: 50%;

  background-color: var(--dark-text);
}

.blog-main-article-title {
  margin-bottom: 12px;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 32px;
  font-weight: 600;
  line-height: 1.313;
}

.blog-main-article-paragraph {
  width: 419px;
  margin-bottom: 37px;
}

.blog-button {
  display: flex;
  align-items: center;
  gap: 10px;

  width: fit-content;
  padding: 15px 15px 15px 0;

  border: transparent;

  background-color: transparent;

  color: var(--dark);
  font-family: "Jost", sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 1.625;
  fill: var(--dark);

  cursor: pointer;

  transition: color var(--transition), fill var(--transition);
}

.blog-button:hover,
.blog-button:focus {
  color: var(--accent);
  fill: var(--accent);
}

.blog-list {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  gap: 24px;

  margin-bottom: 42px;
}
/* ... */

